--- a/style.css
+++ b/style.css
@@ -243,12 +243,18 @@ nav ul a:hover{
     width: 90%;
 }
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 600px) {
     body {
       background-color: lightblue;
     }
+    html{
+        font-size: 14px;
+    }
     .container{
         max-width: 600px;
+        min-width: 100vw;
+        margin: auto;
+        padding: 2rem;
     }
     .main-container{
         grid-template-columns: 1fr;
@@ -260,6 +266,8 @@ nav ul a:hover{
         width: 100%;
     }
     .main-desc{
+        gap: 2rem;
+        min-width: 375px;
         grid-row:3/4;
         grid-column: 1/2;
         width: 100%;
@@ -270,10 +278,14 @@ nav ul a:hover{
         width: 100%;
     }
     .thumbs{
+        min-width: 375px;
         width: 100%;
+        max-width: 600px;
     }
     .thumbs img{
-        width: auto;
+        /* transform: scale(0.5); */
+        
+        
     }
     .thumbs-one{
         grid-column: 1/2;
