--- a/style.css
+++ b/style.css
@@ -242,14 +242,40 @@ nav ul a:hover{
     line-height: 2rem;
     width: 90%;
 }
+.checkbox{
+    display: none;
+}
+.menu{
+    display: none;
+    width: 6rem;
+    height: 6rem;
+    background-color: red;
+    background-image: url(/assets/images/icon-menu.svg);
+}
 
 @media only screen and (max-width: 600px) {
-    body {
-      background-color: lightblue;
-    }
+    
     html{
         font-size: 14px;
     }
+    nav{
+        
+        display: none;
+        background-color: var(--Off-white);
+    }
+    header{
+        flex-direction: column;
+    }
+   
+    
+    /* nav ul{
+        position: absolute;
+        top: 0;
+        right: 0;
+        flex-direction: column;
+        gap: 3rem;
+    } */
+
     .container{
         max-width: 600px;
         min-width: 100vw;
@@ -282,11 +308,7 @@ nav ul a:hover{
         width: 100%;
         max-width: 600px;
     }
-    .thumbs img{
-        /* transform: scale(0.5); */
-        
-        
-    }
+    
     .thumbs-one{
         grid-column: 1/2;
         grid-row: 5/6;
@@ -298,6 +320,18 @@ nav ul a:hover{
     .thumbs-three{
         grid-column: 1/2;
         grid-row: 7/8;
+    }
+
+    #menu{
+        display: block;
+        width: 4rem;
+        height: 4rem;
+        position: relative;
+        background-color: red;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
+        background-image: url(/assets/images/icon-menu.svg);
     }
 
   }
